--- a/Languages/Russian/DefInjected/BodyDef/Bodies_Entities.xml
+++ b/Languages/Russian/DefInjected/BodyDef/Bodies_Entities.xml
@@ -2,18 +2,18 @@
 <LanguageData>
   
   <!-- EN: serpent -->
-  <NAT_Serpent.label>serpent</NAT_Serpent.label>
+  <NAT_Serpent.label>змей</NAT_Serpent.label>
   <!-- EN: left lung -->
-  <NAT_Serpent.corePart.parts.left_lung.customLabel>left lung</NAT_Serpent.corePart.parts.left_lung.customLabel>
+  <NAT_Serpent.corePart.parts.left_lung.customLabel>левое лёгкое</NAT_Serpent.corePart.parts.left_lung.customLabel>
   <!-- EN: right lung -->
-  <NAT_Serpent.corePart.parts.right_lung.customLabel>right lung</NAT_Serpent.corePart.parts.right_lung.customLabel>
+  <NAT_Serpent.corePart.parts.right_lung.customLabel>правое лёгкое</NAT_Serpent.corePart.parts.right_lung.customLabel>
   <!-- EN: left kidney -->
-  <NAT_Serpent.corePart.parts.left_kidney.customLabel>left kidney</NAT_Serpent.corePart.parts.left_kidney.customLabel>
+  <NAT_Serpent.corePart.parts.left_kidney.customLabel>левая почка</NAT_Serpent.corePart.parts.left_kidney.customLabel>
   <!-- EN: right kidney -->
-  <NAT_Serpent.corePart.parts.right_kidney.customLabel>right kidney</NAT_Serpent.corePart.parts.right_kidney.customLabel>
+  <NAT_Serpent.corePart.parts.right_kidney.customLabel>правая почка</NAT_Serpent.corePart.parts.right_kidney.customLabel>
   <!-- EN: left eye -->
-  <NAT_Serpent.corePart.parts.SnakeHead.parts.left_eye.customLabel>left eye</NAT_Serpent.corePart.parts.SnakeHead.parts.left_eye.customLabel>
+  <NAT_Serpent.corePart.parts.SnakeHead.parts.left_eye.customLabel>левый глаз</NAT_Serpent.corePart.parts.SnakeHead.parts.left_eye.customLabel>
   <!-- EN: right eye -->
-  <NAT_Serpent.corePart.parts.SnakeHead.parts.right_eye.customLabel>right eye</NAT_Serpent.corePart.parts.SnakeHead.parts.right_eye.customLabel>
+  <NAT_Serpent.corePart.parts.SnakeHead.parts.right_eye.customLabel>правый глаз</NAT_Serpent.corePart.parts.SnakeHead.parts.right_eye.customLabel>
   
 </LanguageData>
