--- a/Languages/Russian/DefInjected/BodyPartGroupDef/BodyPartGroups.xml
+++ b/Languages/Russian/DefInjected/BodyPartGroupDef/BodyPartGroups.xml
@@ -2,9 +2,9 @@
 <LanguageData>
   
   <!-- EN: bile gland -->
-  <NAT_BileGland.label>bile gland</NAT_BileGland.label>
+  <NAT_BileGland.label>желчная железа</NAT_BileGland.label>
   
   <!-- EN: tail -->
-  <NAT_TailAttackTool.label>tail</NAT_TailAttackTool.label>
+  <NAT_TailAttackTool.label>хвост</NAT_TailAttackTool.label>
   
 </LanguageData>
