--- a/Languages/Russian/DefInjected/InfectionPathwayDef/Hediffs_Global_Misc.xml
+++ b/Languages/Russian/DefInjected/InfectionPathwayDef/Hediffs_Global_Misc.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: implanted by collector -->
-  <NAT_ByCollector.label>implanted by collector</NAT_ByCollector.label>
+  <NAT_ByCollector.label>коллекционирование</NAT_ByCollector.label>
   
 </LanguageData>
