--- a/Languages/Russian/DefInjected/MapGeneratorDef/CollectorLairMapGenerator.xml
+++ b/Languages/Russian/DefInjected/MapGeneratorDef/CollectorLairMapGenerator.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: collector lair -->
-  <NAT_UndergroundLayout.label>collector lair</NAT_UndergroundLayout.label>
+  <NAT_UndergroundLayout.label>логово коллекционера</NAT_UndergroundLayout.label>
   
 </LanguageData>
