--- a/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Mutants.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Mutants.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: shambler soldier -->
-  <NAT_ShamblerArmored.label>shambler soldier</NAT_ShamblerArmored.label>
+  <NAT_ShamblerArmored.label>шамблер-воин</NAT_ShamblerArmored.label>
   
 </LanguageData>
