--- a/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Rusts.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Rusts.xml
@@ -2,30 +2,30 @@
 <LanguageData>
   
   <!-- EN: rusted bannerman -->
-  <NAT_RustedBannerman.label>rusted bannerman</NAT_RustedBannerman.label>
+  <NAT_RustedBannerman.label>ржавый знаменосец</NAT_RustedBannerman.label>
   
   <!-- EN: rusted grenadier -->
-  <NAT_RustedGrenadier.label>rusted grenadier</NAT_RustedGrenadier.label>
+  <NAT_RustedGrenadier.label>ржавый гренадёр</NAT_RustedGrenadier.label>
   
   <!-- EN: rusted gunner -->
-  <NAT_RustedGunner.label>rusted gunner</NAT_RustedGunner.label>
+  <NAT_RustedGunner.label>ржавый автоматчик</NAT_RustedGunner.label>
   
   <!-- EN: heavy rusted gunner -->
-  <NAT_RustedGunner_Heavy.label>heavy rusted gunner</NAT_RustedGunner_Heavy.label>
+  <NAT_RustedGunner_Heavy.label>ржавый пулемётчик</NAT_RustedGunner_Heavy.label>
   
   <!-- EN: rusted hussar -->
-  <NAT_RustedHussar.label>rusted hussar</NAT_RustedHussar.label>
+  <NAT_RustedHussar.label>ржавый гусар</NAT_RustedHussar.label>
   
   <!-- EN: rusted renegade -->
-  <NAT_RustedRenegade.label>rusted renegade</NAT_RustedRenegade.label>
+  <NAT_RustedRenegade.label>ржавый отступник</NAT_RustedRenegade.label>
   
   <!-- EN: rusted rifleman -->
-  <NAT_RustedRifleman.label>rusted rifleman</NAT_RustedRifleman.label>
+  <NAT_RustedRifleman.label>ржавый стрелок</NAT_RustedRifleman.label>
   
   <!-- EN: rusted sapper -->
-  <NAT_RustedSapper.label>rusted sapper</NAT_RustedSapper.label>
+  <NAT_RustedSapper.label>ржавый проломщик</NAT_RustedSapper.label>
   
   <!-- EN: rusted trooper -->
-  <NAT_RustedTrooper_Reinforcement.label>rusted trooper</NAT_RustedTrooper_Reinforcement.label>
+  <NAT_RustedTrooper_Reinforcement.label>ржавый десантник</NAT_RustedTrooper_Reinforcement.label>
   
 </LanguageData>
