--- a/Languages/Russian/DefInjected/PawnKindDef/Races_BileSerpent.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_BileSerpent.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: bile serpent -->
-  <NAT_BileSerpent.label>bile serpent</NAT_BileSerpent.label>
+  <NAT_BileSerpent.label>желчный змей</NAT_BileSerpent.label>
   
 </LanguageData>
