--- a/Languages/Russian/DefInjected/PawnKindDef/Races_Collector.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_Collector.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: collector -->
-  <NAT_Collector.label>collector</NAT_Collector.label>
+  <NAT_Collector.label>коллекционер</NAT_Collector.label>
   
 </LanguageData>
