--- a/Languages/Russian/DefInjected/PawnKindDef/Races_RustedGuardsman.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_RustedGuardsman.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: rusted guardsman -->
-  <NAT_RustedGuardsman.label>rusted guardsman</NAT_RustedGuardsman.label>
+  <NAT_RustedGuardsman.label>ржавый гвардеец</NAT_RustedGuardsman.label>
   
 </LanguageData>
