--- a/Languages/Russian/DefInjected/PawnKindDef/Races_RustedMass.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_RustedMass.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: rusted mass -->
-  <NAT_RustedMass.label>rusted mass</NAT_RustedMass.label>
+  <NAT_RustedMass.label>ржавая масса</NAT_RustedMass.label>
   
 </LanguageData>
