--- a/Languages/Russian/DefInjected/PawnKindDef/Races_RustedOfficer.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_RustedOfficer.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: rusted officer -->
-  <NAT_RustedOfficer.label>rusted officer</NAT_RustedOfficer.label>
+  <NAT_RustedOfficer.label>ржавый офицер</NAT_RustedOfficer.label>
   
 </LanguageData>
