--- a/Languages/Russian/DefInjected/PawnKindDef/Races_RustedSoldier.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_RustedSoldier.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: rusted infantryman -->
-  <NAT_RustedSoldier.label>rusted infantryman</NAT_RustedSoldier.label>
+  <NAT_RustedSoldier.label>ржавый пехотинец</NAT_RustedSoldier.label>
   
 </LanguageData>
