--- a/Languages/Russian/DefInjected/ScenPartDef/Scenario.xml
+++ b/Languages/Russian/DefInjected/ScenPartDef/Scenario.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: start with rust -->
-  <NAT_StartingRustedSoldier.label>start with rust</NAT_StartingRustedSoldier.label>
+  <NAT_StartingRustedSoldier.label>начать со ржавчиной</NAT_StartingRustedSoldier.label>
   
 </LanguageData>
