--- a/Languages/Russian/DefInjected/ThingCategoryDef/Rusted_Base.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/Rusted_Base.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: rusted weapons -->
-  <NAT_WeaponsRusted.label>rusted weapons</NAT_WeaponsRusted.label>
+  <NAT_WeaponsRusted.label>ржавое оружие</NAT_WeaponsRusted.label>
   
 </LanguageData>
