--- a/Languages/Russian/DefInjected/ThingDef/Abilities_Misc.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Abilities_Misc.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: bile -->
-  <NAT_Proj_Bile.label>bile</NAT_Proj_Bile.label>
+  <NAT_Proj_Bile.label>желчь</NAT_Proj_Bile.label>
   
 </LanguageData>
