--- a/Languages/Russian/DefInjected/ThingDef/Filth_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Filth_Various.xml
@@ -2,9 +2,9 @@
 <LanguageData>
   
   <!-- EN: rusted debris -->
-  <NAT_Filth_RustedDebris.label>rusted debris</NAT_Filth_RustedDebris.label>
+  <NAT_Filth_RustedDebris.label>ржавые обломки</NAT_Filth_RustedDebris.label>
   
   <!-- EN: spent bile -->
-  <NAT_Filth_SpentBile.label>spent bile</NAT_Filth_SpentBile.label>
+  <NAT_Filth_SpentBile.label>желчь</NAT_Filth_SpentBile.label>
   
 </LanguageData>
