--- a/Languages/Russian/DefInjected/ThingDef/Items_Manufactured.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Items_Manufactured.xml
@@ -2,8 +2,8 @@
 <LanguageData>
   
   <!-- EN: ancient fabric -->
-  <NAT_AncientFabric.label>ancient fabric</NAT_AncientFabric.label>
+  <NAT_AncientFabric.label>древняя ткань</NAT_AncientFabric.label>
   <!-- EN: Ancient fabric usually found in Rusted army furnisments. It is soft, light, non-flammable, and insulates well. -->
-  <NAT_AncientFabric.description>Ancient fabric usually found in Rusted army furnisments. It is soft, light, non-flammable, and insulates well.</NAT_AncientFabric.description>
+  <NAT_AncientFabric.description>Древняя ткань обычно используемая ржавыми созданиями.</NAT_AncientFabric.description>
   
 </LanguageData>
