--- a/Languages/Russian/DefInjected/ThingDef/Items_Serum.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Items_Serum.xml
@@ -2,29 +2,25 @@
 <LanguageData>
   
   <!-- EN: bile power serum -->
-  <NAT_BilePowerSerum.label>bile power serum</NAT_BilePowerSerum.label>
+  <NAT_BilePowerSerum.label>сыворотка желчной силы</NAT_BilePowerSerum.label>
   <!-- EN: A syringe of sticky fluid made from bile serpents gland. It supresses effect of bile slowness and decreases acid damage.\n\nThe effect is temporary and does not stack. -->
-  <NAT_BilePowerSerum.description>A syringe of sticky fluid made from bile serpents gland. It supresses effect of bile slowness and decreases acid damage.
-
-The effect is temporary and does not stack.</NAT_BilePowerSerum.description>
+  <NAT_BilePowerSerum.description>Шприц с липкой жёлто-оранжевой жидкостью, которая подавляет эффект змеиной желчи, а также уменьшает воспламеняемость и урон от кислоты.</NAT_BilePowerSerum.description>
   <!-- EN: Use {0_label} -->
-  <NAT_BilePowerSerum.comps.CompUsable.useLabel>Use {0_label}</NAT_BilePowerSerum.comps.CompUsable.useLabel>
+  <NAT_BilePowerSerum.comps.CompUsable.useLabel>>Использовать: {0_label}</NAT_BilePowerSerum.comps.CompUsable.useLabel>
   <!-- EN: Ingest {0} -->
-  <NAT_BilePowerSerum.ingestible.ingestCommandString>Ingest {0}</NAT_BilePowerSerum.ingestible.ingestCommandString>
+  <NAT_BilePowerSerum.ingestible.ingestCommandString>Ввести: {0}</NAT_BilePowerSerum.ingestible.ingestCommandString>
   <!-- EN: Ingesting {0}. -->
-  <NAT_BilePowerSerum.ingestible.ingestReportString>Ingesting {0}.</NAT_BilePowerSerum.ingestible.ingestReportString>
+  <NAT_BilePowerSerum.ingestible.ingestReportString>В процессе введения: {0}.</NAT_BilePowerSerum.ingestible.ingestReportString>
   
   <!-- EN: pain quench serum -->
-  <NAT_PainQuenchSerum.label>pain quench serum</NAT_PainQuenchSerum.label>
+  <NAT_PainQuenchSerum.label>сыворотка болеподавления</NAT_PainQuenchSerum.label>
   <!-- EN: A syringe of turbid plum fluid that fully suppresses any pain, even induced.\n\nThe effect is temporary and does not stack. -->
-  <NAT_PainQuenchSerum.description>A syringe of turbid plum fluid that fully suppresses any pain, even induced.
-
-The effect is temporary and does not stack.</NAT_PainQuenchSerum.description>
+  <NAT_PainQuenchSerum.description>Шприц с мутнойфиолетовой жидкостью, которая полностью подавляет боль, в том числе и наведённую.</NAT_PainQuenchSerum.description>
   <!-- EN: Use {0_label} -->
-  <NAT_PainQuenchSerum.comps.CompUsable.useLabel>Use {0_label}</NAT_PainQuenchSerum.comps.CompUsable.useLabel>
+  <NAT_PainQuenchSerum.comps.CompUsable.useLabel>>Использовать: {0_label}</NAT_PainQuenchSerum.comps.CompUsable.useLabel>
   <!-- EN: Ingest {0} -->
-  <NAT_PainQuenchSerum.ingestible.ingestCommandString>Ingest {0}</NAT_PainQuenchSerum.ingestible.ingestCommandString>
+  <NAT_PainQuenchSerum.ingestible.ingestCommandString>Ввести: {0}</NAT_PainQuenchSerum.ingestible.ingestCommandString>
   <!-- EN: Ingesting {0}. -->
-  <NAT_PainQuenchSerum.ingestible.ingestReportString>Ingesting {0}.</NAT_PainQuenchSerum.ingestible.ingestReportString>
+  <NAT_PainQuenchSerum.ingestible.ingestReportString>В процессе введения: {0}.</NAT_PainQuenchSerum.ingestible.ingestReportString>
   
 </LanguageData>
