--- a/Languages/Russian/DefInjected/ThingDef/Races_BileSerpent.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_BileSerpent.xml
@@ -2,14 +2,14 @@
 <LanguageData>
   
   <!-- EN: bile serpent -->
-  <NAT_BileSerpent.label>bile serpent</NAT_BileSerpent.label>
+  <NAT_BileSerpent.label>желчный змей</NAT_BileSerpent.label>
   <!-- EN: A huge predatory snake, that can spit bile at their enemies. Bile they produce is sticky and thick enough to slow even large animals like elephants, but doesn't affect other entities. -->
-  <NAT_BileSerpent.description>A huge predatory snake, that can spit bile at their enemies. Bile they produce is sticky and thick enough to slow even large animals like elephants, but doesn't affect other entities.</NAT_BileSerpent.description>
+  <NAT_BileSerpent.description>Большая хищная змея, плюющяяся липкой желчью во врагов. Желчь прилепает к органическим тканям, затрудняя передвижение и манипуляцию, но никак не влияет на других тварей.</NAT_BileSerpent.description>
   <!-- EN: fangs -->
-  <NAT_BileSerpent.tools.fangs.label>fangs</NAT_BileSerpent.tools.fangs.label>
+  <NAT_BileSerpent.tools.fangs.label>клыки</NAT_BileSerpent.tools.fangs.label>
   <!-- EN: head -->
-  <NAT_BileSerpent.tools.head.label>head</NAT_BileSerpent.tools.head.label>
+  <NAT_BileSerpent.tools.head.label>голова</NAT_BileSerpent.tools.head.label>
   <!-- EN: tail -->
-  <NAT_BileSerpent.tools.tail.label>tail</NAT_BileSerpent.tools.tail.label>
+  <NAT_BileSerpent.tools.tail.label>хвост</NAT_BileSerpent.tools.tail.label>
   
 </LanguageData>
