--- a/Languages/Russian/DefInjected/BodyPartDef/BodyParts.xml
+++ b/Languages/Russian/DefInjected/BodyPartDef/BodyParts.xml
@@ -2,33 +2,33 @@
 <LanguageData>
   
   <!-- EN: bile gland -->
-  <NAT_BileGland.label>bile gland</NAT_BileGland.label>
+  <NAT_BileGland.label>желчная железа</NAT_BileGland.label>
   
   <!-- EN: arm -->
-  <NAT_RustedArm.label>arm</NAT_RustedArm.label>
+  <NAT_RustedArm.label>рука</NAT_RustedArm.label>
   
   <!-- EN: core -->
-  <NAT_RustedCore.label>core</NAT_RustedCore.label>
+  <NAT_RustedCore.label>ядро</NAT_RustedCore.label>
   
   <!-- EN: eye socket -->
-  <NAT_RustedEyeSocket.label>eye socket</NAT_RustedEyeSocket.label>
+  <NAT_RustedEyeSocket.label>глазница</NAT_RustedEyeSocket.label>
   
   <!-- EN: finger -->
-  <NAT_RustedFinger.label>finger</NAT_RustedFinger.label>
+  <NAT_RustedFinger.label>палец</NAT_RustedFinger.label>
   
   <!-- EN: foot -->
-  <NAT_RustedFoot.label>foot</NAT_RustedFoot.label>
+  <NAT_RustedFoot.label>ступня</NAT_RustedFoot.label>
   
   <!-- EN: head -->
-  <NAT_RustedHead.label>head</NAT_RustedHead.label>
+  <NAT_RustedHead.label>голова</NAT_RustedHead.label>
   
   <!-- EN: leg -->
-  <NAT_RustedLeg.label>leg</NAT_RustedLeg.label>
+  <NAT_RustedLeg.label>нога</NAT_RustedLeg.label>
   
   <!-- EN: shoulder -->
-  <NAT_RustedShoulder.label>shoulder</NAT_RustedShoulder.label>
+  <NAT_RustedShoulder.label>плечо</NAT_RustedShoulder.label>
   
   <!-- EN: torso -->
-  <NAT_RustedTorso.label>torso</NAT_RustedTorso.label>
+  <NAT_RustedTorso.label>торс</NAT_RustedTorso.label>
   
 </LanguageData>
