--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_BodyParts_Prosthetic.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_BodyParts_Prosthetic.xml
@@ -2,8 +2,8 @@
 <LanguageData>
   
   <!-- EN: bile heart -->
-  <NAT_BileHeart.label>bile heart</NAT_BileHeart.label>
+  <NAT_BileHeart.label>желчное сердце</NAT_BileHeart.label>
   <!-- EN: A modified human heart that allows a ghoul to spray bile. -->
-  <NAT_BileHeart.description>A modified human heart that allows a ghoul to spray bile.</NAT_BileHeart.description>
+  <NAT_BileHeart.description>Модифицированное человеческое сердце, позволяющее упырю разбрызгивать желчь.</NAT_BileHeart.description>
   
 </LanguageData>
