--- a/Languages/Russian/DefInjected/PawnKindDef/Races_RustedTrooper.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_RustedTrooper.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   
-  <!-- EN: rusted trooper -->
-  <NAT_RustedTrooper.label>rusted trooper</NAT_RustedTrooper.label>
+  <!-- EN: rusted stormtrooper -->
+  <NAT_RustedTrooper.label>ржавый десантник</NAT_RustedTrooper.label>
   
 </LanguageData>
