--- a/Languages/Russian/DefInjected/PawnKindDef/Scenario.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Scenario.xml
@@ -2,6 +2,6 @@
 <LanguageData>
   
   <!-- EN: cultist -->
-  <NAT_PlayerCultist.label>cultist</NAT_PlayerCultist.label>
+  <NAT_PlayerCultist.label>культист</NAT_PlayerCultist.label>
   
 </LanguageData>
