--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Rusted_Misc.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Rusted_Misc.xml
@@ -2,18 +2,18 @@
 <LanguageData>
   
   <!-- EN: rusted army banner -->
-  <NAT_RustedArmyBanner.label>rusted army banner</NAT_RustedArmyBanner.label>
+  <NAT_RustedArmyBanner.label>знамя Ржавой армии</NAT_RustedArmyBanner.label>
   <!-- EN: A Rusted army banner. -->
-  <NAT_RustedArmyBanner.description>A Rusted army banner.</NAT_RustedArmyBanner.description>
+  <NAT_RustedArmyBanner.description>Знамя Ржавой армии.</NAT_RustedArmyBanner.description>
   
   <!-- EN: rusted beacon -->
-  <NAT_RustedBeacon_Reinforcements.label>rusted beacon</NAT_RustedBeacon_Reinforcements.label>
+  <NAT_RustedBeacon_Reinforcements.label>ржавый маяк</NAT_RustedBeacon_Reinforcements.label>
   <!-- EN: A rusted beacon that calls reinforcements if there are enemies nearby. Can be stunned with EMP or disruptors. -->
-  <NAT_RustedBeacon_Reinforcements.description>A rusted beacon that calls reinforcements if there are enemies nearby. Can be stunned with EMP or disruptors.</NAT_RustedBeacon_Reinforcements.description>
+  <NAT_RustedBeacon_Reinforcements.description>Ржавый маяк, вызывающий подкрепление, если рядом есть противник. Может быть выведен из строя при помощи ЭМИ или дизрапторов.</NAT_RustedBeacon_Reinforcements.description>
   
   <!-- EN: rusted broadcast dish -->
-  <NAT_RustedBroadcastDish.label>rusted broadcast dish</NAT_RustedBroadcastDish.label>
+  <NAT_RustedBroadcastDish.label>ржавая ретрансляционная тарелка</NAT_RustedBroadcastDish.label>
   <!-- EN: A large rusted broadcast dish. Transfers signals in Rusted army communication network. -->
-  <NAT_RustedBroadcastDish.description>A large rusted broadcast dish. Transfers signals in Rusted army communication network.</NAT_RustedBroadcastDish.description>
+  <NAT_RustedBroadcastDish.description>Ржавая широковолновая ретрансляционная тарелка. Передаёт сигналы внутри коммуникационной сети Ржавой армии.</NAT_RustedBroadcastDish.description>
   
 </LanguageData>
