--- a/Languages/Russian/DefInjected/ThingDef/Items_UsableByRusts.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Items_UsableByRusts.xml
@@ -2,30 +2,28 @@
 <LanguageData>
   
   <!-- EN: rusted charge activator -->
-  <NAT_RustedActivator_Charge.label>rusted charge activator</NAT_RustedActivator_Charge.label>
+  <NAT_RustedActivator_Charge.label>ржавый активатор заряда</NAT_RustedActivator_Charge.label>
   <!-- EN: A small device that increases work speed of rust. -->
-  <NAT_RustedActivator_Charge.description>A small device that increases work speed of rust.</NAT_RustedActivator_Charge.description>
+  <NAT_RustedActivator_Charge.description>Малое устройство увеличивающее скорость работы ржавчины.</NAT_RustedActivator_Charge.description>
   
   <!-- EN: rusted durability activator -->
-  <NAT_RustedActivator_Durability.label>rusted durability activator</NAT_RustedActivator_Durability.label>
+  <NAT_RustedActivator_Durability.label>ржавый активатор прочности</NAT_RustedActivator_Durability.label>
   <!-- EN: A small device that increases durability of rust. -->
-  <NAT_RustedActivator_Durability.description>A small device that increases durability of rust.</NAT_RustedActivator_Durability.description>
+  <NAT_RustedActivator_Durability.description>Малое устройство увеличивающее прочность ржавчины.</NAT_RustedActivator_Durability.description>
   
   <!-- EN: rusted regeneration activator -->
-  <NAT_RustedActivator_Regeneration.label>rusted regeneration activator</NAT_RustedActivator_Regeneration.label>
+  <NAT_RustedActivator_Regeneration.label>ржавый активатор регенерации</NAT_RustedActivator_Regeneration.label>
   <!-- EN: A small device that increases regeneration of rust. -->
-  <NAT_RustedActivator_Regeneration.description>A small device that increases regeneration of rust.</NAT_RustedActivator_Regeneration.description>
+  <NAT_RustedActivator_Regeneration.description>Малое устройство увеличивающее регенерацию ржавчины.</NAT_RustedActivator_Regeneration.description>
   
   <!-- EN: rusted speed activator -->
-  <NAT_RustedActivator_Speed.label>rusted speed activator</NAT_RustedActivator_Speed.label>
+  <NAT_RustedActivator_Speed.label>ржавый активатор скорости</NAT_RustedActivator_Speed.label>
   <!-- EN: A small device that increases speed of rust. -->
-  <NAT_RustedActivator_Speed.description>A small device that increases speed of rust.</NAT_RustedActivator_Speed.description>
+  <NAT_RustedActivator_Speed.description>Малое устройство увеличивающее скорость передвижения ржавчины.</NAT_RustedActivator_Speed.description>
   
   <!-- EN: shard upgrader -->
-  <NAT_ShardUpgrader.label>shard upgrader</NAT_ShardUpgrader.label>
+  <NAT_ShardUpgrader.label>осколочный улучшатель</NAT_ShardUpgrader.label>
   <!-- EN: Special device that can upgrade rust using shard of dark archotechnology.\n\nMakes rust core fully stable. -->
-  <NAT_ShardUpgrader.description>Special device that can upgrade rust using shard of dark archotechnology.
-
-Makes rust core fully stable.</NAT_ShardUpgrader.description>
+  <NAT_ShardUpgrader.description>Специальное устройство, которое улучшает ржавчину при помощи тёмного архо-осколка.\n\nДелает ядро ржавчины полностью стабильным.</NAT_ShardUpgrader.description>
   
 </LanguageData>
