--- a/Languages/Russian/DefInjected/ThingDef/Things_Projectiles.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Things_Projectiles.xml
@@ -2,21 +2,21 @@
 <LanguageData>
   
   <!-- EN: rusted shell -->
-  <NAT_Bullet_RustedHighVelocity.label>rusted shell</NAT_Bullet_RustedHighVelocity.label>
+  <NAT_Bullet_RustedHighVelocity.label>ржавый снаряд</NAT_Bullet_RustedHighVelocity.label>
   
   <!-- EN: rusted shell -->
-  <NAT_Bullet_RustedLarge.label>rusted shell</NAT_Bullet_RustedLarge.label>
+  <NAT_Bullet_RustedLarge.label>ржавый снаряд</NAT_Bullet_RustedLarge.label>
   
   <!-- EN: rusted bullet -->
-  <NAT_Bullet_RustedMedium.label>rusted bullet</NAT_Bullet_RustedMedium.label>
+  <NAT_Bullet_RustedMedium.label>ржавая пуля</NAT_Bullet_RustedMedium.label>
   
   <!-- EN: rusted shotgun blast -->
-  <NAT_Bullet_RustedShotgun.label>rusted shotgun blast</NAT_Bullet_RustedShotgun.label>
+  <NAT_Bullet_RustedShotgun.label>ржавая дробь</NAT_Bullet_RustedShotgun.label>
   
   <!-- EN: rusted bullet -->
-  <NAT_Bullet_RustedSmall.label>rusted bullet</NAT_Bullet_RustedSmall.label>
+  <NAT_Bullet_RustedSmall.label>ржавая пуля</NAT_Bullet_RustedSmall.label>
   
   <!-- EN: rusted bullet -->
-  <NAT_Bullet_RustedSmallStop.label>rusted bullet</NAT_Bullet_RustedSmallStop.label>
+  <NAT_Bullet_RustedSmallStop.label>ржавая пуля</NAT_Bullet_RustedSmallStop.label>
   
 </LanguageData>
