--- a/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
+++ b/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
@@ -2,8 +2,8 @@
 <LanguageData>
   
   <!-- EN: obelisk suppression -->
-  <NAT_ObeliskSuppression.stages.obelisk_suppression.label>obelisk suppression</NAT_ObeliskSuppression.stages.obelisk_suppression.label>
+  <NAT_ObeliskSuppression.stages.obelisk_suppression.label>подавление обелиска</NAT_ObeliskSuppression.stages.obelisk_suppression.label>
   <!-- EN: I feel this rock behind me, I feel it's weight on my head. -->
-  <NAT_ObeliskSuppression.stages.obelisk_suppression.description>I feel this rock behind me, I feel it's weight on my head.</NAT_ObeliskSuppression.stages.obelisk_suppression.description>
+  <NAT_ObeliskSuppression.stages.obelisk_suppression.description>Я чувствую этот камень позади себя, я чувствую его вес.</NAT_ObeliskSuppression.stages.obelisk_suppression.description>
   
 </LanguageData>
